tests/baselines/reference/downlevelLetConst19(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
downlevelLetConst19.ts(9,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== downlevelLetConst19.ts (1 errors) ====
    'use strict'
    declare function use(a: any);
    var x;
    function a() {
      {
        let x;
        use(x);
    
        function b() {
                 ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
            {
                let x;
                use(x);
            }
            use(x);
        }
      }
      use(x)
    }
    use(x)